Solved visal bug disquss not showing.

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -150,6 +150,10 @@ pre{
             margin: 15px 0;
         }
     }
+
+    #disqus_thread {
+        width: 100%;
+    }
 }
 
 .cookie-law-container {
